--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <h6 class="text-secondary text-uppercase mb-3">A Propos de nous</h6>
                     <h1 class="mb-5">NOUS SOMMES A VOS CÔTES POUR TOUS VOS CHANTIERS DE BTP !</h1>
                     <p class="mb-5">Vous êtes à la recherche d’une entreprise pour la vente, la livraison de sable et de granulats, de ciment, 
-                        des travaux d'ornement ou de constructions dans l’Ogooué Maritime ? <br> Notre entreprise du bâtiment vous propose du sable, du ciment  et des granulats adaptés à vos besoins, avec des propriétés différentes. <br><br>
+                        des travaux d'ornement ou de constructions au Gabon ? <br> Notre entreprise vous propose du sable, du ciment  et d'autres matériaux adaptés à vos besoins à des coûts attractifs. <br><br>
                     <strong style="color: blue;">Les défis d’une entreprise innovante : notre société est à votre service depuis 2020 et réinvente la vente et la distribution des matériaux de ss dans la province ! </strong> <br><br>
                         Notre organisation est composée d’une dizaine de partenaires  pour un accompagnement optimal dans vos commandes et sur vos chantiers. <br> 
                         Nous réalisons l’ensemble de vos commandes pour des travaux publics : des professionnels pour les professionnels. <br>
