--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Ventede matériaux de ss</h5>
-                                <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de ss</h1>
+                                <h5 class="text-white text-uppercase mb-3 animated slideInDown">Solution de Transport et de Ventede matériaux de constructions</h5>
+                                <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de constructions</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Assistance, Négoces, vente et transport de matériaux de ss pour les professionnels et les particuliers.</p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
                                 <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis gratuit</a>
