mise à jour des chmaps

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BIKERE- Transport et Vente de Granulats</title>
+    <title>BIKERE- Transport et Vente de matériaux de constructions</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -59,7 +59,7 @@
                     <div class="dropdown-menu fade-up m-0">
                         <a href="price.html" class="dropdown-item">Plans Tarifaires</a>
                         <a href="feature.html" class="dropdown-item">Fonctionnalités</a>
-                        <a href="quote.html" class="dropdown-item">Devis gratuit</a>
+                        <a href="quote.html" class="dropdown-item">Devis </a>
                         <a href="team.html" class="dropdown-item">Notre équipe</a>
                         <a href="testimonial.html" class="dropdown-item">Témoignages</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
@@ -86,7 +86,7 @@
                                 <h1 class="display-3 text-white animated slideInDown mb-4">BIKERE, <span class="text-primary">Une centrale d'achats</span> innovante pour vos travaux de constructions</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2"> <span style="height: 35px;"> Assistance, Négoces, vente et transport de matériaux de constructions  pour les professionnels et les particuliers.</p></span>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
-                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis gratuit</a>
+                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis </a>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Une centrale d'achats</span> innovante pour vos travaux de constructions</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-2">Assistance, Négoces, vente et transport de matériaux de constructions pour les professionnels et les particuliers.</p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Lire Plus</a>
-                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis gratuit</a>
+                                <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Devis</a>
                             </div>
                         </div>
                     </div>
@@ -157,8 +157,8 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Quelques faits</h6>
-                    <h1 class="mb-5">Une plateforme pour assurer toute votre logistque</h1>
-                    <p class="mb-5">Notre plateforme d'Accueil vous assure un traitement rapide de votre Commande et met en place une programmation adaptée à chaque contexte.</p>
+                    <h1 class="mb-5">Une plateforme pour assurer toute votre logistique</h1>
+                    <p class="mb-5">Notre plateforme d'accueil vous assure un traitement rapide de votre Commande et met en place une programmation adaptée à chaque contexte.</p>
                     <div class="d-flex align-items-center">
                         <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                         <div class="ps-4">
@@ -209,8 +209,10 @@
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/service-1.jpg" alt="">
                         </div>
-                        <h4 class="mb-3">Produits roulés</h4>
-                        <p>Nous vous fournissons des matériaux roulés et vous conseillons sur leur utilisation..</p>
+                        <h4 class="mb-3">Sable</h4>
+                        <p>Nous vous fournissons deux types de sables: <br></p>
+                        <li>sable issu du fleuve, parfait pour le BTP</li>
+                        <li>Sable de remblais issu de de mer</li>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
@@ -219,7 +221,7 @@
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/service-2.jpg" alt="">
                         </div>
-                        <h4 class="mb-3">Produits concassése</h4>
+                        <h4 class="mb-3">Produits concassés</h4>
                         <p>Nous vous conseillons lors de votre choix de graviers concassés jusqu'au début des travaux.</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
@@ -229,8 +231,16 @@
                         <div class="overflow-hidden mb-4">
                             <img class="img-fluid" src="img/service-3.jpg" alt="">
                         </div>
-                        <h4 class="mb-3">Le gravier concassé </h4>
-                        <p>Le gravier concassé est une matière issue des roches de carrière, parfaite pour un ornement durable..</p>
+                        <h4 class="mb-3">Ciment </h4>
+                        <h6>CEM II B-LL/42,5N</h6>
+                            <strong style="color: blue;">Domaine d'application:</strong>
+                            <li>Fabrication des parpings</li>
+                            <li>poteaux et poutres </li>
+                            <li>Coulage de dalle et bétons armés.</li>
+                            <h6>CEM II B-LL/32,5N</h6>
+                            <strong style="color: blue;">Domaine d'application:</strong>
+                            <li>Crépissage, Pose et joints des parpings et pièrres</li>
+                            <li>Réalisation de couche de forme, charpe et joints des carreaux</li>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
@@ -240,7 +250,10 @@
                             <img class="img-fluid" src="img/service-4.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Transport</h4>
-                        <p>Détails en cours de chargement et seront disponibles plus tard</p>
+                        <h6 style="color: blue;">Fret Lbv / POG</h6>
+                        <p>Un service d'affrètement par conteneur pour l'acheminement des matériaux (ciment)</p>
+                       <h6 style="color: blue;">Camion et TM</h6> 
+                        <p>Un réseau de transport expérimenté au service de la clientèle</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
@@ -250,7 +263,9 @@
                             <img class="img-fluid" src="img/service-5.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Négoces</h4>
-                        <p>Détails en cours de chargement et seront disponibles plus tard</p>
+                        <li>Conseils techniques</li>
+                        <li>Choix des matériaux adptés à vos projets</li>
+                        <li>Prix au gros ou détails, autant de service que nous vous offrons pour mener à bien vos projets</li>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
@@ -260,7 +275,7 @@
                             <img class="img-fluid" src="img/service-6.jpg" alt="">
                         </div>
                         <h4 class="mb-3">Solutions d’entrepôt</h4>
-                        <p>Détails en cours de chargement et seront disponibles plus tard</p>
+                        <p>Nous disposons d'un hangard adapté au stockage de matériaux au sein d'un site de 7000 m² non loin du centre ville</p>
                         <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                     </div>
                 </div>
@@ -300,7 +315,7 @@
                         <i class="fa fa-headphones text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
                             <h5>24/7 Assistance téléphonique</h5>
-                            <p class="mb-0">Détails en cours de chargement et seront disponibles plus tard</p>
+                            <p class="mb-0">Un numéro d'appel au service de tous nos clients pour répondre à toutes vos préoccupations</p>
                         </div>
                     </div>
                 </div>
@@ -316,7 +331,7 @@
 
 
     <!-- Pricing Start -->
-    <div class="container-xxl py-5">
+   <!-- <div class="container-xxl py-5">
         <div class="container py-5">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="text-secondary text-uppercase">Plan tarifaire</h6>
@@ -382,7 +397,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Pricing End -->
 
 
@@ -393,7 +408,7 @@
                 <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Obtenir un dévis</h6>
                     <h1 class="mb-5">Demander un Devis!</h1>
-                    <p class="mb-5">Détails en cours de chargement et seront disponibles plus tard </p>
+                    <p class="mb-5">Faites-nous parvenir vos commandes et notre service commerciale se chargera de vous proposer un devis personnalisé selon votre budget. </p>
                     <div class="d-flex align-items-center">
                         <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
                         <div class="ps-4">
@@ -597,10 +612,11 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h4 class="text-light mb-4">Services</h4>
-                <a class="btn btn-link" href="">Produits Roulés</a>
-                <a class="btn btn-link" href="">Produits concassés</a>
-                <a class="btn btn-link" href="">Gravier Concassé</a>
-                <a class="btn btn-link" href="">Solutions Logistiques</a>
+                <a class="btn btn-link" href="">Sables</a>
+                <a class="btn btn-link" href="">Graviers</a>
+                <a class="btn btn-link" href="">Remblais</a>
+                <a class="btn btn-link" href="">Latérite</a>
+                <a class="btn btn-link" href="">Solutions logistiques</a>
                 <a class="btn btn-link" href="">Solutions sectorielles</a>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -625,7 +641,7 @@
         <div class="copyright">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">BIKENE</a>, Tous droits réservés.
+                    &copy; <a class="border-bottom" href="#">BIKERE</a>, Tous droits réservés.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
