--- a/service.html
+++ b/service.html
@@ -89,8 +89,8 @@
     <!-- Page Header End -->
 
 
- <!-- Service Start -->
- <div class="container-xxl py-5">
+<!-- Service Start -->
+<div class="container-xxl py-5">
     <div class="container py-5">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="text-secondary text-uppercase">Nos Services</h6>
@@ -102,8 +102,10 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/service-1.jpg" alt="">
                     </div>
-                    <h4 class="mb-3">Produits roulés</h4>
-                    <p>Nous vous fournissons des matériaux roulés et vous conseillons sur leur utilisation..</p>
+                    <h4 class="mb-3">Sable</h4>
+                    <p>Nous vous fournissons deux types de sables: <br></p>
+                    <li>sable issu du fleuve, parfait pour le BTP</li>
+                    <li>Sable de remblais issu de de mer</li>
                     <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                 </div>
             </div>
@@ -112,7 +114,7 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/service-2.jpg" alt="">
                     </div>
-                    <h4 class="mb-3">Produits concassése</h4>
+                    <h4 class="mb-3">Produits concassés</h4>
                     <p>Nous vous conseillons lors de votre choix de graviers concassés jusqu'au début des travaux.</p>
                     <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                 </div>
@@ -122,8 +124,16 @@
                     <div class="overflow-hidden mb-4">
                         <img class="img-fluid" src="img/service-3.jpg" alt="">
                     </div>
-                    <h4 class="mb-3">Le gravier concassé </h4>
-                    <p>Le gravier concassé est une matière issue des roches de carrière, parfaite pour un ornement durable..</p>
+                    <h4 class="mb-3">Ciment </h4>
+                    <h6>CEM II B-LL/42,5N</h6>
+                        <strong style="color: blue;">Domaine d'application:</strong>
+                        <li>Fabrication des parpings</li>
+                        <li>poteaux et poutres </li>
+                        <li>Coulage de dalle et bétons armés.</li>
+                        <h6>CEM II B-LL/32,5N</h6>
+                        <strong style="color: blue;">Domaine d'application:</strong>
+                        <li>Crépissage, Pose et joints des parpings et pièrres</li>
+                        <li>Réalisation de couche de forme, charpe et joints des carreaux</li>
                     <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                 </div>
             </div>
@@ -133,7 +143,10 @@
                         <img class="img-fluid" src="img/service-4.jpg" alt="">
                     </div>
                     <h4 class="mb-3">Transport</h4>
-                    <p>Détails en cours de chargement et seront disponibles plus tard</p>
+                    <h6 style="color: blue;">Fret Lbv / POG</h6>
+                    <p>Un service d'affrètement par conteneur pour l'acheminement des matériaux (ciment)</p>
+                   <h6 style="color: blue;">Camion et TM</h6> 
+                    <p>Un réseau de transport expérimenté au service de la clientèle</p>
                     <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                 </div>
             </div>
@@ -143,7 +156,9 @@
                         <img class="img-fluid" src="img/service-5.jpg" alt="">
                     </div>
                     <h4 class="mb-3">Négoces</h4>
-                    <p>Détails en cours de chargement et seront disponibles plus tard</p>
+                    <li>Conseils techniques</li>
+                    <li>Choix des matériaux adptés à vos projets</li>
+                    <li>Prix au gros ou détails, autant de service que nous vous offrons pour mener à bien vos projets</li>
                     <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                 </div>
             </div>
@@ -153,7 +168,7 @@
                         <img class="img-fluid" src="img/service-6.jpg" alt="">
                     </div>
                     <h4 class="mb-3">Solutions d’entrepôt</h4>
-                    <p>Détails en cours de chargement et seront disponibles plus tard</p>
+                    <p>Nous disposons d'un hangard adapté au stockage de matériaux au sein d'un site de 7000 m² non loin du centre ville</p>
                     <a class="btn-slide mt-2" href=""><i class="fa fa-arrow-right"></i><span>Lire Plus</span></a>
                 </div>
             </div>
@@ -161,6 +176,7 @@
     </div>
 </div>
 <!-- Service End -->
+
 
 
 
