--- a/feature.html
+++ b/feature.html
@@ -95,7 +95,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase mb-3">Quelques faits</h6>
-                    <h1 class="mb-5">#1 endroit pour gérer tous vos envois</h1>
+                    <h1 class="mb-5">Un endroit pour gérer tous vos envois</h1>
                     <p class="mb-5">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
                     <div class="d-flex align-items-center">
                         <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
@@ -159,7 +159,7 @@
                         <i class="fa fa-headphones text-primary fa-3x flex-shrink-0"></i>
                         <div class="ms-4">
                             <h5>24/7 Assistance téléphonique</h5>
-                            <p class="mb-0">Diam dolor ipsum sit amet eos erat ipsum lorem sed stet lorem sit clita duo justo magna erat amet</p>
+                            <p class="mb-0">Un numéro d'appel au service de tous nos clients pour répondre à toutes vos préoccupations</p>
                         </div>
                     </div>
                 </div>
